test/analyzer/input_programs/invalid_programs/program05.tea
# recursive functions will work just fine
# since scope of variable begins at
# declaration operator
f := () ->
  f()
end

# the following will not work since
# z is not in scope
x := 4
y := 44
[x, y, z]
z := 444